--- a/react-router-animate/package.json
+++ b/react-router-animate/package.json
@@ -9,9 +9,10 @@
     "watch": "npm run watch:js & npm run watch:sass",
     "watch:js": "watchify src/js/app.js -o app.bundle.js -t [ babelify --stage 0 ] -v -d",
     "watch:sass": "node-sass --output-style expanded -r src/sass -o ./ -w",
-    "build": "npm run build:js & npm run build:sass",
-    "build:js": "browserify src/js/app.js -o app.bundle.js -t [ babelify --stage 0 --sourceMapRelative '.' ]",
-    "build:sass": "node-sass --output-style compressed -r src/sass -o ./"
+    "build": "npm run build:sass & npm run build:js && npm run uglify",
+    "build:js": "NODE_ENV=production browserify src/js/app.js -o app.bundle.js -t [ babelify --stage 0 ]",
+    "build:sass": "node-sass --output-style compressed -r src/sass -o ./",
+    "uglify": "uglifyjs app.bundle.js -o app.bundle.js"
   },
   "author": "tsuyoshiwada",
   "license": "MIT",
@@ -20,6 +21,7 @@
     "browser-sync": "^2.9.11",
     "browserify": "^12.0.1",
     "node-sass": "^3.4.1",
+    "uglify-js": "^2.5.0",
     "watchify": "^3.6.0"
   },
   "dependencies": {
