--- a/ssr/package.json
+++ b/ssr/package.json
@@ -1,11 +1,42 @@
 {
-  "name": "react-ssr",
+  "name": "react-ssr-sample",
+  "private": true,
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "parallelshell 'supervisor server.js' 'npm run watch'",
+    "build": "npm run build:dir && npm run build:js",
+    "build:dir": "mkdirp public/js",
+    "build:js": "npm run browserify",
+    "watch": "npm run watch:js",
+    "watch:js": "npm run watchify",
+    "browserify": "browserify src/client.js -o public/js/client.bundle.js -t [ babelify ]",
+    "watchify": "watchify src/client.js -o public/js/client.bundle.js -t [ babelify ] -v -d"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "tsuyoshiwada",
+  "license": "MIT",
+  "devDependencies": {
+    "babelify": "^7.2.0",
+    "browserify": "^13.0.0",
+    "envify": "^3.4.0",
+    "mkdirp": "^0.5.1",
+    "parallelshell": "^2.0.0",
+    "supervisor": "^0.10.0",
+    "watchify": "^3.7.0"
+  },
+  "dependencies": {
+    "babel": "^6.5.2",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-register": "^6.7.2",
+    "body-parser": "^1.15.0",
+    "ejs": "^2.4.1",
+    "express": "^4.13.4",
+    "forever": "^0.15.1",
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1",
+    "react-router": "^2.3.0",
+    "redux-thunk": "^2.0.1"
+  }
 }
