--- a/ssr/package.json
+++ b/ssr/package.json
@@ -12,7 +12,7 @@
     "watch": "npm run watch:js",
     "watch:js": "npm run watchify",
     "browserify": "browserify src/client.js -o public/js/client.bundle.js -t [ babelify ]",
-    "watchify": "watchify src/client.js -o public/js/client.bundle.js -t [ babelify ] -v -d"
+    "watchify": "watchify src/client.js -o public/js/client.bundle.js -t [ babelify ] -v"
   },
   "author": "tsuyoshiwada",
   "license": "MIT",
@@ -29,6 +29,7 @@
     "babel": "^6.5.2",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-1": "^6.5.0",
     "babel-register": "^6.7.2",
     "body-parser": "^1.15.0",
     "ejs": "^2.4.1",
@@ -37,6 +38,7 @@
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-router": "^2.3.0",
+    "react-router-redux": "^4.0.4",
     "redux-thunk": "^2.0.1"
   }
 }
