--- a/ssr/package.json
+++ b/ssr/package.json
@@ -12,7 +12,7 @@
     "watch": "npm run watch:js",
     "watch:js": "npm run watchify",
     "browserify": "browserify src/client.js -o public/js/client.bundle.js -t [ babelify ]",
-    "watchify": "watchify src/client.js -o public/js/client.bundle.js -t [ babelify ] -v"
+    "watchify": "watchify src/client.js -o public/js/client.bundle.js -t [ babelify ] -v -d"
   },
   "author": "tsuyoshiwada",
   "license": "MIT",
@@ -39,6 +39,7 @@
     "react-dom": "^15.0.1",
     "react-router": "^2.3.0",
     "react-router-redux": "^4.0.4",
+    "redux-logger": "^2.6.1",
     "redux-thunk": "^2.0.1"
   }
 }
