--- a/ssr/package.json
+++ b/ssr/package.json
@@ -37,6 +37,7 @@
     "forever": "^0.15.1",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
+    "react-helmet": "^3.1.0",
     "react-router": "^2.3.0",
     "react-router-redux": "^4.0.4",
     "redux-logger": "^2.6.1",
