--- a/google-api/package.json
+++ b/google-api/package.json
@@ -41,6 +41,7 @@
     "google-auth-library": "^0.9.7",
     "googleapis": "^5.2.1",
     "isomorphic-fetch": "^2.2.1",
+    "object-assign": "^4.0.1",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-helmet": "^3.1.0",
