--- a/google-api/package.json
+++ b/google-api/package.json
@@ -36,11 +36,11 @@
     "dotenv": "^2.0.0",
     "es6-promise": "^3.1.2",
     "express": "^4.13.4",
-    "express-session": "^1.13.0",
     "forever": "^0.15.1",
     "google-auth-library": "^0.9.7",
     "googleapis": "^5.2.1",
     "isomorphic-fetch": "^2.2.1",
+    "multer": "^1.1.0",
     "object-assign": "^4.0.1",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
