--- a/google-api/package.json
+++ b/google-api/package.json
@@ -40,6 +40,7 @@
     "google-auth-library": "^0.9.7",
     "googleapis": "^5.2.1",
     "isomorphic-fetch": "^2.2.1",
+    "method-override": "^2.3.5",
     "multer": "^1.1.0",
     "object-assign": "^4.0.1",
     "react": "^15.0.1",
