--- a/google-api/package.json
+++ b/google-api/package.json
@@ -51,6 +51,7 @@
     "react-router-redux": "^4.0.4",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
-    "redux-thunk": "^2.0.1"
+    "redux-thunk": "^2.0.1",
+    "webshot": "^0.18.0"
   }
 }
