--- a/image-editor/package.json
+++ b/image-editor/package.json
@@ -21,7 +21,9 @@
     "watchify": "^3.7.0"
   },
   "dependencies": {
+    "material-ui": "^0.15.0",
     "react": "^15.1.0",
-    "react-dom": "^15.1.0"
+    "react-dom": "^15.1.0",
+    "react-tap-event-plugin": "^1.0.0"
   }
 }
