--- a/image-viewer/package.json
+++ b/image-viewer/package.json
@@ -21,6 +21,7 @@
     "watchify": "^3.7.0"
   },
   "dependencies": {
+    "iscroll": "^5.2.0",
     "material-ui": "^0.15.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
