--- a/image-viewer/package.json
+++ b/image-viewer/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "iscroll": "^5.2.0",
     "material-ui": "^0.15.0",
+    "object-assign": "^4.1.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-tap-event-plugin": "^1.0.0"
